feature[PanamaUring] 1,增加api更一致的select read